[gd_scene load_steps=9 format=3 uid="uid://cwm3rdtdsp1jb"]

[ext_resource type="Script" path="res://menu.gd" id="1_fmygg"]
[ext_resource type="Texture2D" uid="uid://dhfpv33j1y8s0" path="res://arts/menu/ui_main_menu_design/ui_main_menu_design/start_green.png" id="1_wvame"]
[ext_resource type="Texture2D" uid="uid://baugf2kjl36tj" path="res://arts/menu/ui_main_menu_design/ui_main_menu_design/Firefly 20241012185446.png" id="2_fxy6k"]
[ext_resource type="Texture2D" uid="uid://f2rwcp0r2gn5" path="res://arts/menu/ui_main_menu_design/ui_main_menu_design/options.png" id="2_n5tt8"]
[ext_resource type="Texture2D" uid="uid://dkje6fdubdilr" path="res://arts/menu/ui_main_menu_design/ui_main_menu_design/titleqq.png" id="3_4cmqq"]
[ext_resource type="Texture2D" uid="uid://cqncaj0vfxs7c" path="res://arts/menu/ui_main_menu_design/ui_main_menu_design/numberrr.png" id="5_tkb5v"]
[ext_resource type="Texture2D" uid="uid://cu7ant2qs2xjn" path="res://arts/menu/ui_main_menu_design/ui_main_menu_design/Players_1 (2).png" id="7_d3w3d"]
[ext_resource type="Texture2D" uid="uid://c187nakxbsvl6" path="res://arts/menu/ui_main_menu_design/ui_main_menu_design/Players_2 (1).png" id="8_cav13"]

[node name="Node" type="Node"]
script = ExtResource("1_fmygg")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(47.88, 26.88)
texture = ExtResource("2_fxy6k")
expand_mode = 1

[node name="Title" type="TextureRect" parent="."]
offset_left = 114.0
offset_top = -290.0
offset_right = 2034.0
offset_bottom = 790.0
scale = Vector2(0.88, 1)
texture = ExtResource("3_4cmqq")

[node name="Start" type="Button" parent="."]
offset_left = 929.0
offset_top = 620.0
offset_right = 937.0
offset_bottom = 628.0
scale = Vector2(1.12, 1.04)
action_mode = 0
keep_pressed_outside = true

[node name="TextureRect" type="TextureRect" parent="Start"]
layout_mode = 0
offset_left = -235.0
offset_top = -84.0
offset_right = -195.0
offset_bottom = -44.0
scale = Vector2(11.5872, 6.29237)
texture = ExtResource("1_wvame")
expand_mode = 1

[node name="Options" type="Button" parent="."]
offset_left = 926.0
offset_top = 824.0
offset_right = 934.0
offset_bottom = 832.0

[node name="Options" type="TextureRect" parent="Options"]
layout_mode = 0
offset_left = -200.0
offset_top = -89.0
offset_right = -160.0
offset_bottom = -49.0
scale = Vector2(11.1072, 6.29237)
texture = ExtResource("2_n5tt8")
expand_mode = 1

[node name="Number" type="Button" parent="."]
visible = false
offset_left = 897.0
offset_top = 767.0
offset_right = 905.0
offset_bottom = 775.0

[node name="Options" type="TextureRect" parent="Number"]
layout_mode = 0
offset_left = -381.0
offset_top = -213.0
offset_right = -341.0
offset_bottom = -173.0
scale = Vector2(22.1872, 6.53237)
texture = ExtResource("5_tkb5v")
expand_mode = 1

[node name="Num1" type="Button" parent="."]
visible = false
offset_left = 965.0
offset_top = 800.0
offset_right = 973.0
offset_bottom = 808.0
scale = Vector2(0.455878, 0.480002)

[node name="num1" type="TextureRect" parent="Num1"]
layout_mode = 0
offset_left = -465.036
offset_top = -43.7498
offset_right = -317.036
offset_bottom = 104.25
scale = Vector2(1.51334, 1.70677)
texture = ExtResource("7_d3w3d")

[node name="Num2" type="Button" parent="."]
visible = false
offset_left = 688.0
offset_top = 436.0
offset_right = 696.0
offset_bottom = 444.0

[node name="num2" type="TextureRect" parent="Num2"]
layout_mode = 0
offset_left = 348.0
offset_top = 338.0
offset_right = 388.0
offset_bottom = 378.0
scale = Vector2(2.59805, 2.80794)
texture = ExtResource("8_cav13")
expand_mode = 1

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
